[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_09/Body.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_09/Parts/Pawn_09_Part_Legs.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_09/Parts/Pawn_09_Part_Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pawns/Pawn_09/Parts/Pawn_09_Part_Arm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Pawns/Pawn_09.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=6]
height = 30.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.0
height = 78.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 42.0

[sub_resource type="Animation" id=4]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 5 ) ]
}

[node name="Pawn_09" type="KinematicBody2D" groups=[
"hittable",
"ladder",
"player",
]]
collision_layer = 2
collision_mask = 67102
script = ExtResource( 5 )

[node name="Timers" type="Node2D" parent="."]

[node name="Knock_Back" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="Shield_Hit" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="Shield_Up" type="Timer" parent="Timers"]

[node name="Stun" type="Timer" parent="Timers"]
wait_time = 1.1

[node name="Speed" type="Timer" parent="Timers"]

[node name="Jump" type="Timer" parent="Timers"]

[node name="NRG_Up" type="Timer" parent="Timers"]

[node name="Raycasts" type="Node2D" parent="."]

[node name="Up" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 2058

[node name="Down_L" type="RayCast2D" parent="Raycasts"]
position = Vector2( -13, 26 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2078

[node name="Down_R" type="RayCast2D" parent="Raycasts"]
position = Vector2( 11, 26 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2078

[node name="CollisionShape2D-Down" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 13 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D_Right" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 10, -1 )
shape = SubResource( 6 )
disabled = true

[node name="CollisionShape2D_Left" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -10, -1 )
shape = SubResource( 6 )
disabled = true

[node name="Shield" type="Sprite" parent="."]

[node name="Body" type="Sprite" parent="."]
position = Vector2( 7, 5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -11 )
hframes = 2

[node name="Pawn_09_Part_Head" parent="Body" instance=ExtResource( 3 )]
position = Vector2( 0, -17 )

[node name="Pawn_09_Part_Arm" parent="Body" instance=ExtResource( 4 )]
position = Vector2( 0, -12 )

[node name="Pawn_09_Part_Legs" parent="." instance=ExtResource( 2 )]

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 786432

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Left = SubResource( 4 )
anims/Right = SubResource( 5 )
[connection signal="timeout" from="Timers/Knock_Back" to="." method="_on_Knock_Back_timeout"]
[connection signal="timeout" from="Timers/Shield_Hit" to="." method="_on_Shield_Hit_timeout"]
[connection signal="timeout" from="Timers/Shield_Up" to="." method="_on_Shield_Up_timeout"]
[connection signal="timeout" from="Timers/Stun" to="." method="_on_Stun_timeout"]
[connection signal="timeout" from="Timers/Speed" to="." method="_on_Speed_timeout"]
[connection signal="timeout" from="Timers/Jump" to="." method="_on_Jump_timeout"]
[connection signal="timeout" from="Timers/NRG_Up" to="." method="_on_NRG_Up_timeout"]
[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
